#237 graceful handling of deprecation issue for cassandra